--- a/event/messanger/index.html
+++ b/event/messanger/index.html
@@ -9,9 +9,7 @@
     <section class="chat">
       <h1 class="visually-hidden">Чат</h1>
 
-      <div class="chat-content">
-
-      </div>
+      <div class="chat-content"></div>
 
       <form class="chat-form" action="https://echo.htmlacademy.ru/courses" method="post">
         <input class="chat-form-input" type="text" aria-label="Ваше сообщение" placeholder="Напишите что-нибудь" required>
