--- a/mySite/contacts.html
+++ b/mySite/contacts.html
@@ -1,4 +1,5 @@
-<html lang="ru"><head>
+<html lang="ru">
+<head>
   <meta charset="UTF-8">
   <title>Интернет-магазин товаров для дома</title>
   <link href="style.css" rel="stylesheet">
